fix scroll layout issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@ body {
 	overflow-wrap: break-word;
 	line-height: 1.5;
 	color: #444;
+	overflow-y: scroll;
 }
 h1,
 h2,
